@@ -129,6 +129,157 @@ test cursor-4.1 {FreeCursorObjProc} {testcursor} {
     set result
 } {{{1 3}} {{1 2}} {{1 1}} {}}
 
+# -------------------------------------------------------------------------
+
+test cursor-5.1 {assert consistent cursor configuration command} \
+    -setup { button .b } \
+    -body {
+        list [catch {.b configure -cursor {watch red black}} msg] $msg
+    } \
+    -cleanup {destroy .b} \
+    -result {0 {}}
+
+# -------------------------------------------------------------------------
+# Check for the standard set of cursors.
+
+set n 0
+foreach cursor {
+    X_cursor
+    arrow
+    based_arrow_down
+    based_arrow_up
+    boat
+    bogosity
+    bottom_left_corner
+    bottom_right_corner
+    bottom_side
+    bottom_tee
+    box_spiral
+    center_ptr
+    circle
+    clock
+    coffee_mug
+    cross
+    cross_reverse
+    crosshair
+    diamond_cross
+    dot
+    dotbox
+    double_arrow
+    draft_large
+    draft_small
+    draped_box
+    exchange
+    fleur
+    gobbler
+    gumby
+    hand1
+    hand2
+    heart
+    icon
+    iron_cross
+    left_ptr
+    left_side
+    left_tee
+    leftbutton
+    ll_angle
+    lr_angle
+    man
+    middlebutton
+    mouse
+    pencil
+    pirate
+    plus
+    question_arrow
+    right_ptr
+    right_side
+    right_tee
+    rightbutton
+    rtl_logo
+    sailboat
+    sb_down_arrow
+    sb_h_double_arrow
+    sb_left_arrow
+    sb_right_arrow
+    sb_up_arrow
+    sb_v_double_arrow
+    shuttle
+    sizing
+    spider
+    spraycan
+    star
+    target
+    tcross
+    top_left_arrow
+    top_left_corner
+    top_right_corner
+    top_side
+    top_tee
+    trek
+    ul_angle
+    umbrella
+    ur_angle
+    watch
+    xterm
+} {
+    test cursor-6.$n {check cursor $cursor} \
+        -setup {button .b -text $cursor} \
+        -body {
+            list [catch {.b configure -cursor $cursor} msg] $msg
+        } \
+        -cleanup {destroy .b} \
+        -result {0 {}}
+    incr n
+}
+unset n
+
+# -------------------------------------------------------------------------
+# Check the Windows specific cursors
+set n 0
+foreach cursor {
+    no
+    starting
+    size
+    size_ne_sw
+    size_ns
+    size_nw_se
+    size_we
+    uparrow
+    wait
+} {
+    test cursor-7.$n {check cursor $cursor} \
+        -constraints {pcOnly} \
+        -setup {button .b -text $cursor} \
+        -body {
+            list [catch {.b configure -cursor $cursor} msg] $msg
+        } \
+        -cleanup {destroy .b} \
+        -result {0 {}}
+    incr n
+}
+unset n
+
+# -------------------------------------------------------------------------
+# Check the Mac specific cursors
+set n 0
+foreach cursor {
+    text
+    cross-hair
+} {
+    test cursor-8.$n {check cursor $cursor} \
+        -constraints {macOnly} \
+        -setup {button .b -text $cursor} \
+        -body {
+            list [catch {.b configure -cursor $cursor} msg] $msg
+        } \
+        -cleanup {destroy .b} \
+        -result {0 {}}
+    incr n
+}
+unset n
+
+# -------------------------------------------------------------------------
+
 destroy .t
 
 # cleanup
